Fixes broken Icinga plain config

--- a/config/icinga/Invoke-IcingaCheckBiosSerial.conf
+++ b/config/icinga/Invoke-IcingaCheckBiosSerial.conf
@@ -30,5 +30,5 @@ object CheckCommand "Invoke-IcingaCheckBiosSerial" {
             value = "$IcingaCheckBiosSerial_String_ThresholdInterval$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckbiosserial
+    vars.ifw_api_command = "invoke-icingacheckbiosserial"
 }
