--- a/config/icinga/Invoke-IcingaCheckCPU.conf
+++ b/config/icinga/Invoke-IcingaCheckCPU.conf
@@ -116,6 +116,6 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             value = "$IcingaCheckCPU_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckcpu
+    vars.ifw_api_command = "invoke-icingacheckcpu"
     vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
 }
