--- a/config/icinga/Invoke-IcingaCheckCertificate.conf
+++ b/config/icinga/Invoke-IcingaCheckCertificate.conf
@@ -244,6 +244,6 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             set_if = "$IcingaCheckCertificate_Switchparameter_Recurse$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckcertificate
+    vars.ifw_api_command = "invoke-icingacheckcertificate"
     vars.IcingaCheckCertificate_Switchparameter_Trusted = false
 }
