--- a/config/icinga/Invoke-IcingaCheckCheckSum.conf
+++ b/config/icinga/Invoke-IcingaCheckCheckSum.conf
@@ -107,5 +107,5 @@ object CheckCommand "Invoke-IcingaCheckCheckSum" {
             value = "$IcingaCheckCheckSum_String_Hash$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckchecksum
+    vars.ifw_api_command = "invoke-icingacheckchecksum"
 }
