--- a/config/icinga/Invoke-IcingaCheckDirectory.conf
+++ b/config/icinga/Invoke-IcingaCheckDirectory.conf
@@ -363,7 +363,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
         }
     }
     vars.IcingaCheckDirectory_Switchparameter_ShowFileList = false
-    vars.ifw_api_command = invoke-icingacheckdirectory
+    vars.ifw_api_command = "invoke-icingacheckdirectory"
     vars.IcingaCheckDirectory_Switchparameter_NoPerfData = false
     vars.IcingaCheckDirectory_Switchparameter_Recurse = false
 }
