--- a/config/icinga/Invoke-IcingaCheckDiskHealth.conf
+++ b/config/icinga/Invoke-IcingaCheckDiskHealth.conf
@@ -317,6 +317,6 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
     }
     vars.IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly = false
     vars.IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks = false
-    vars.ifw_api_command = invoke-icingacheckdiskhealth
+    vars.ifw_api_command = "invoke-icingacheckdiskhealth"
     vars.IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks = false
 }
