--- a/config/icinga/Invoke-IcingaCheckEventlog.conf
+++ b/config/icinga/Invoke-IcingaCheckEventlog.conf
@@ -374,6 +374,6 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             value = "$IcingaCheckEventlog_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckeventlog
+    vars.ifw_api_command = "invoke-icingacheckeventlog"
     vars.IcingaCheckEventlog_Switchparameter_NoPerfData = false
 }
