--- a/config/icinga/Invoke-IcingaCheckFirewall.conf
+++ b/config/icinga/Invoke-IcingaCheckFirewall.conf
@@ -78,7 +78,7 @@ object CheckCommand "Invoke-IcingaCheckFirewall" {
             set_if = "$IcingaCheckFirewall_Switchparameter_Enabled$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckfirewall
+    vars.ifw_api_command = "invoke-icingacheckfirewall"
     vars.IcingaCheckFirewall_Switchparameter_Enabled = false
     vars.IcingaCheckFirewall_Switchparameter_NoPerfData = false
 }
