--- a/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
+++ b/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
@@ -303,6 +303,6 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
     }
     vars.IcingaCheckHTTPStatus_Switchparameter_AddOutputContent = false
     vars.IcingaCheckHTTPStatus_Switchparameter_ConnectionErrAsCrit = false
-    vars.ifw_api_command = invoke-icingacheckhttpstatus
+    vars.ifw_api_command = "invoke-icingacheckhttpstatus"
     vars.IcingaCheckHTTPStatus_Switchparameter_Negate = false
 }
