--- a/config/icinga/Invoke-IcingaCheckHttpJsonResponse.conf
+++ b/config/icinga/Invoke-IcingaCheckHttpJsonResponse.conf
@@ -285,7 +285,7 @@ object CheckCommand "Invoke-IcingaCheckHttpJsonResponse" {
             value = "$IcingaCheckHttpJsonResponse_String_ServerUri$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckhttpjsonresponse
+    vars.ifw_api_command = "invoke-icingacheckhttpjsonresponse"
     vars.IcingaCheckHttpJsonResponse_Switchparameter_IgnoreSSL = false
     vars.IcingaCheckHttpJsonResponse_Switchparameter_NoPerfData = false
 }
