--- a/config/icinga/Invoke-IcingaCheckMPIO.conf
+++ b/config/icinga/Invoke-IcingaCheckMPIO.conf
@@ -62,5 +62,5 @@ object CheckCommand "Invoke-IcingaCheckMPIO" {
             value = "$IcingaCheckMPIO_Object_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckmpio
+    vars.ifw_api_command = "invoke-icingacheckmpio"
 }
