--- a/config/icinga/Invoke-IcingaCheckMemory.conf
+++ b/config/icinga/Invoke-IcingaCheckMemory.conf
@@ -129,5 +129,5 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
             value = "$IcingaCheckMemory_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckmemory
+    vars.ifw_api_command = "invoke-icingacheckmemory"
 }
