--- a/config/icinga/Invoke-IcingaCheckNLA.conf
+++ b/config/icinga/Invoke-IcingaCheckNLA.conf
@@ -85,5 +85,5 @@ object CheckCommand "Invoke-IcingaCheckNLA" {
             value = "$IcingaCheckNLA_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingachecknla
+    vars.ifw_api_command = "invoke-icingachecknla"
 }
