--- a/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
+++ b/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
@@ -390,5 +390,5 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             value = "$IcingaCheckNetworkInterface_Object_PacketReceivedSecCrit$"
         }
     }
-    vars.ifw_api_command = invoke-icingachecknetworkinterface
+    vars.ifw_api_command = "invoke-icingachecknetworkinterface"
 }
