--- a/config/icinga/Invoke-IcingaCheckPartitionSpace.conf
+++ b/config/icinga/Invoke-IcingaCheckPartitionSpace.conf
@@ -138,5 +138,5 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
     vars.IcingaCheckPartitionSpace_Switchparameter_IgnoreEmptyChecks = false
     vars.IcingaCheckPartitionSpace_Switchparameter_CheckUsedSpace = false
     vars.IcingaCheckPartitionSpace_Switchparameter_NoPerfData = false
-    vars.ifw_api_command = invoke-icingacheckpartitionspace
+    vars.ifw_api_command = "invoke-icingacheckpartitionspace"
 }
