--- a/config/icinga/Invoke-IcingaCheckPerfcounter.conf
+++ b/config/icinga/Invoke-IcingaCheckPerfcounter.conf
@@ -148,5 +148,5 @@ object CheckCommand "Invoke-IcingaCheckPerfCounter" {
             value = "$IcingaCheckPerfCounter_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckperfcounter
+    vars.ifw_api_command = "invoke-icingacheckperfcounter"
 }
