--- a/config/icinga/Invoke-IcingaCheckProcess.conf
+++ b/config/icinga/Invoke-IcingaCheckProcess.conf
@@ -216,5 +216,5 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
             value = "$IcingaCheckProcess_Object_TotalCPUCritical$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckprocess
+    vars.ifw_api_command = "invoke-icingacheckprocess"
 }
