--- a/config/icinga/Invoke-IcingaCheckProcessCount.conf
+++ b/config/icinga/Invoke-IcingaCheckProcessCount.conf
@@ -87,6 +87,6 @@ object CheckCommand "Invoke-IcingaCheckProcessCount" {
             value = "$IcingaCheckProcessCount_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckprocesscount
+    vars.ifw_api_command = "invoke-icingacheckprocesscount"
     vars.IcingaCheckProcessCount_Switchparameter_NoPerfData = false
 }
