--- a/config/icinga/Invoke-IcingaCheckScheduledTask.conf
+++ b/config/icinga/Invoke-IcingaCheckScheduledTask.conf
@@ -231,6 +231,6 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             value = "$IcingaCheckScheduledTask_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckscheduledtask
+    vars.ifw_api_command = "invoke-icingacheckscheduledtask"
     vars.IcingaCheckScheduledTask_Switchparameter_NoPerfData = false
 }
