--- a/config/icinga/Invoke-IcingaCheckService.conf
+++ b/config/icinga/Invoke-IcingaCheckService.conf
@@ -152,6 +152,6 @@ object CheckCommand "Invoke-IcingaCheckService" {
             value = "$IcingaCheckService_Array_Exclude$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckservice
+    vars.ifw_api_command = "invoke-icingacheckservice"
     vars.IcingaCheckService_Switchparameter_MitigateUnknown = false
 }
