--- a/config/icinga/Invoke-IcingaCheckStoragePool.conf
+++ b/config/icinga/Invoke-IcingaCheckStoragePool.conf
@@ -217,6 +217,6 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
             value = "$IcingaCheckStoragePool_Object_CapacityWarning$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckstoragepool
+    vars.ifw_api_command = "invoke-icingacheckstoragepool"
     vars.IcingaCheckStoragePool_Switchparameter_NoPerfData = false
 }
