--- a/config/icinga/Invoke-IcingaCheckTCP.conf
+++ b/config/icinga/Invoke-IcingaCheckTCP.conf
@@ -116,6 +116,6 @@ object CheckCommand "Invoke-IcingaCheckTCP" {
             value = "$IcingaCheckTCP_Object_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingachecktcp
+    vars.ifw_api_command = "invoke-icingachecktcp"
     vars.IcingaCheckTCP_Switchparameter_NoPerfData = false
 }
