--- a/config/icinga/Invoke-IcingaCheckTimeSync.conf
+++ b/config/icinga/Invoke-IcingaCheckTimeSync.conf
@@ -122,6 +122,6 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
             value = "$IcingaCheckTimeSync_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingachecktimesync
+    vars.ifw_api_command = "invoke-icingachecktimesync"
     vars.IcingaCheckTimeSync_Switchparameter_IgnoreService = false
 }
