--- a/config/icinga/Invoke-IcingaCheckUNCPath.conf
+++ b/config/icinga/Invoke-IcingaCheckUNCPath.conf
@@ -156,6 +156,6 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             value = "$IcingaCheckUNCPath_String_User$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckuncpath
+    vars.ifw_api_command = "invoke-icingacheckuncpath"
     vars.IcingaCheckUNCPath_Switchparameter_NoPerfData = false
 }
