--- a/config/icinga/Invoke-IcingaCheckUpdates.conf
+++ b/config/icinga/Invoke-IcingaCheckUpdates.conf
@@ -168,5 +168,5 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             value = "$IcingaCheckUpdates_Object_WarningOther$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckupdates
+    vars.ifw_api_command = "invoke-icingacheckupdates"
 }
