--- a/config/icinga/Invoke-IcingaCheckUptime.conf
+++ b/config/icinga/Invoke-IcingaCheckUptime.conf
@@ -88,5 +88,5 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
             value = "$IcingaCheckUptime_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckuptime
+    vars.ifw_api_command = "invoke-icingacheckuptime"
 }
