--- a/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
+++ b/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
@@ -136,7 +136,7 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
     }
     vars.IcingaCheckUsedPartitionSpace_Switchparameter_CheckUsedSpace = false
     vars.IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks = false
-    vars.ifw_api_command = invoke-icingacheckusedpartitionspace
+    vars.ifw_api_command = "invoke-icingacheckusedpartitionspace"
     vars.IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData = false
     vars.IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown = false
 }
