--- a/config/icinga/Invoke-IcingaCheckUsers.conf
+++ b/config/icinga/Invoke-IcingaCheckUsers.conf
@@ -88,5 +88,5 @@ object CheckCommand "Invoke-IcingaCheckUsers" {
             value = "$IcingaCheckUsers_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckusers
+    vars.ifw_api_command = "invoke-icingacheckusers"
 }
