--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -62,7 +62,7 @@ object CheckCommand "Invoke-IcingaCheckMPIO" {
             value = "$IcingaCheckMPIO_Object_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckmpio
+    vars.ifw_api_command = "invoke-icingacheckmpio"
 }
 
 object CheckCommand "Invoke-IcingaCheckUsers" {
@@ -155,7 +155,7 @@ object CheckCommand "Invoke-IcingaCheckUsers" {
             value = "$IcingaCheckUsers_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckusers
+    vars.ifw_api_command = "invoke-icingacheckusers"
 }
 
 object CheckCommand "Invoke-IcingaCheckCertificate" {
@@ -404,7 +404,7 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             set_if = "$IcingaCheckCertificate_Switchparameter_Recurse$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckcertificate
+    vars.ifw_api_command = "invoke-icingacheckcertificate"
     vars.IcingaCheckCertificate_Switchparameter_Trusted = false
 }
 
@@ -539,7 +539,7 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
             value = "$IcingaCheckMemory_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckmemory
+    vars.ifw_api_command = "invoke-icingacheckmemory"
 }
 
 object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
@@ -682,7 +682,7 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
     vars.IcingaCheckPartitionSpace_Switchparameter_IgnoreEmptyChecks = false
     vars.IcingaCheckPartitionSpace_Switchparameter_CheckUsedSpace = false
     vars.IcingaCheckPartitionSpace_Switchparameter_NoPerfData = false
-    vars.ifw_api_command = invoke-icingacheckpartitionspace
+    vars.ifw_api_command = "invoke-icingacheckpartitionspace"
 }
 
 object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
@@ -990,7 +990,7 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
     }
     vars.IcingaCheckHTTPStatus_Switchparameter_AddOutputContent = false
     vars.IcingaCheckHTTPStatus_Switchparameter_ConnectionErrAsCrit = false
-    vars.ifw_api_command = invoke-icingacheckhttpstatus
+    vars.ifw_api_command = "invoke-icingacheckhttpstatus"
     vars.IcingaCheckHTTPStatus_Switchparameter_Negate = false
 }
 
@@ -1081,7 +1081,7 @@ object CheckCommand "Invoke-IcingaCheckNLA" {
             value = "$IcingaCheckNLA_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingachecknla
+    vars.ifw_api_command = "invoke-icingachecknla"
 }
 
 object CheckCommand "Invoke-IcingaCheckBiosSerial" {
@@ -1116,7 +1116,7 @@ object CheckCommand "Invoke-IcingaCheckBiosSerial" {
             value = "$IcingaCheckBiosSerial_String_ThresholdInterval$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckbiosserial
+    vars.ifw_api_command = "invoke-icingacheckbiosserial"
 }
 
 object CheckCommand "Invoke-IcingaCheckEventlog" {
@@ -1495,7 +1495,7 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             value = "$IcingaCheckEventlog_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckeventlog
+    vars.ifw_api_command = "invoke-icingacheckeventlog"
     vars.IcingaCheckEventlog_Switchparameter_NoPerfData = false
 }
 
@@ -1818,7 +1818,7 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
     }
     vars.IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly = false
     vars.IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks = false
-    vars.ifw_api_command = invoke-icingacheckdiskhealth
+    vars.ifw_api_command = "invoke-icingacheckdiskhealth"
     vars.IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks = false
 }
 
@@ -2040,7 +2040,7 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
             value = "$IcingaCheckProcess_Object_TotalCPUCritical$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckprocess
+    vars.ifw_api_command = "invoke-icingacheckprocess"
 }
 
 object CheckCommand "Invoke-IcingaCheckCheckSum" {
@@ -2152,7 +2152,7 @@ object CheckCommand "Invoke-IcingaCheckCheckSum" {
             value = "$IcingaCheckCheckSum_String_Hash$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckchecksum
+    vars.ifw_api_command = "invoke-icingacheckchecksum"
 }
 
 object CheckCommand "Invoke-IcingaCheckScheduledTask" {
@@ -2388,7 +2388,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             value = "$IcingaCheckScheduledTask_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckscheduledtask
+    vars.ifw_api_command = "invoke-icingacheckscheduledtask"
     vars.IcingaCheckScheduledTask_Switchparameter_NoPerfData = false
 }
 
@@ -2472,7 +2472,7 @@ object CheckCommand "Invoke-IcingaCheckFirewall" {
             set_if = "$IcingaCheckFirewall_Switchparameter_Enabled$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckfirewall
+    vars.ifw_api_command = "invoke-icingacheckfirewall"
     vars.IcingaCheckFirewall_Switchparameter_Enabled = false
     vars.IcingaCheckFirewall_Switchparameter_NoPerfData = false
 }
@@ -2869,7 +2869,7 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             value = "$IcingaCheckNetworkInterface_Object_PacketReceivedSecCrit$"
         }
     }
-    vars.ifw_api_command = invoke-icingachecknetworkinterface
+    vars.ifw_api_command = "invoke-icingachecknetworkinterface"
 }
 
 object CheckCommand "Invoke-IcingaCheckHttpJsonResponse" {
@@ -3159,7 +3159,7 @@ object CheckCommand "Invoke-IcingaCheckHttpJsonResponse" {
             value = "$IcingaCheckHttpJsonResponse_String_ServerUri$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckhttpjsonresponse
+    vars.ifw_api_command = "invoke-icingacheckhttpjsonresponse"
     vars.IcingaCheckHttpJsonResponse_Switchparameter_IgnoreSSL = false
     vars.IcingaCheckHttpJsonResponse_Switchparameter_NoPerfData = false
 }
@@ -3529,7 +3529,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
         }
     }
     vars.IcingaCheckDirectory_Switchparameter_ShowFileList = false
-    vars.ifw_api_command = invoke-icingacheckdirectory
+    vars.ifw_api_command = "invoke-icingacheckdirectory"
     vars.IcingaCheckDirectory_Switchparameter_NoPerfData = false
     vars.IcingaCheckDirectory_Switchparameter_Recurse = false
 }
@@ -3692,7 +3692,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             value = "$IcingaCheckUNCPath_String_User$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckuncpath
+    vars.ifw_api_command = "invoke-icingacheckuncpath"
     vars.IcingaCheckUNCPath_Switchparameter_NoPerfData = false
 }
 
@@ -3846,7 +3846,7 @@ object CheckCommand "Invoke-IcingaCheckPerfCounter" {
             value = "$IcingaCheckPerfCounter_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckperfcounter
+    vars.ifw_api_command = "invoke-icingacheckperfcounter"
 }
 
 object CheckCommand "Invoke-IcingaCheckICMP" {
@@ -3980,7 +3980,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             set_if = "$IcingaCheckICMP_Switchparameter_IPv4$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckicmp
+    vars.ifw_api_command = "invoke-icingacheckicmp"
     vars.IcingaCheckICMP_Switchparameter_IPv6 = false
     vars.IcingaCheckICMP_Switchparameter_IPv4 = false
 }
@@ -4123,7 +4123,7 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
     }
     vars.IcingaCheckUsedPartitionSpace_Switchparameter_CheckUsedSpace = false
     vars.IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks = false
-    vars.ifw_api_command = invoke-icingacheckusedpartitionspace
+    vars.ifw_api_command = "invoke-icingacheckusedpartitionspace"
     vars.IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData = false
     vars.IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown = false
 }
@@ -4282,7 +4282,7 @@ object CheckCommand "Invoke-IcingaCheckService" {
             value = "$IcingaCheckService_Array_Exclude$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckservice
+    vars.ifw_api_command = "invoke-icingacheckservice"
     vars.IcingaCheckService_Switchparameter_MitigateUnknown = false
 }
 
@@ -4404,7 +4404,7 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             value = "$IcingaCheckCPU_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckcpu
+    vars.ifw_api_command = "invoke-icingacheckcpu"
     vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
 }
 
@@ -4526,7 +4526,7 @@ object CheckCommand "Invoke-IcingaCheckTCP" {
             value = "$IcingaCheckTCP_Object_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingachecktcp
+    vars.ifw_api_command = "invoke-icingachecktcp"
     vars.IcingaCheckTCP_Switchparameter_NoPerfData = false
 }
 
@@ -4620,7 +4620,7 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
             value = "$IcingaCheckUptime_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckuptime
+    vars.ifw_api_command = "invoke-icingacheckuptime"
 }
 
 object CheckCommand "Invoke-IcingaCheckStoragePool" {
@@ -4842,7 +4842,7 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
             value = "$IcingaCheckStoragePool_Object_CapacityWarning$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckstoragepool
+    vars.ifw_api_command = "invoke-icingacheckstoragepool"
     vars.IcingaCheckStoragePool_Switchparameter_NoPerfData = false
 }
 
@@ -5016,7 +5016,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             value = "$IcingaCheckUpdates_Object_WarningOther$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckupdates
+    vars.ifw_api_command = "invoke-icingacheckupdates"
 }
 
 object CheckCommand "Invoke-IcingaCheckProcessCount" {
@@ -5108,7 +5108,7 @@ object CheckCommand "Invoke-IcingaCheckProcessCount" {
             value = "$IcingaCheckProcessCount_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckprocesscount
+    vars.ifw_api_command = "invoke-icingacheckprocesscount"
     vars.IcingaCheckProcessCount_Switchparameter_NoPerfData = false
 }
 
@@ -5236,7 +5236,7 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
             value = "$IcingaCheckTimeSync_Int32_Verbosity$"
         }
     }
-    vars.ifw_api_command = invoke-icingachecktimesync
+    vars.ifw_api_command = "invoke-icingachecktimesync"
     vars.IcingaCheckTimeSync_Switchparameter_IgnoreService = false
 }
 
