--- a/config/icinga/Invoke-IcingaCheckICMP.conf
+++ b/config/icinga/Invoke-IcingaCheckICMP.conf
@@ -129,7 +129,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             set_if = "$IcingaCheckICMP_Switchparameter_IPv4$"
         }
     }
-    vars.ifw_api_command = invoke-icingacheckicmp
+    vars.ifw_api_command = "invoke-icingacheckicmp"
     vars.IcingaCheckICMP_Switchparameter_IPv6 = false
     vars.IcingaCheckICMP_Switchparameter_IPv4 = false
 }
