Adds support for Invoke-IcingaCheckService to report not found services as CRITICAL instead of UNKNOWN

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -3497,7 +3497,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
 
     arguments += {
         "-WarningTotal" = {
-            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 8
         }
@@ -4122,6 +4122,24 @@ object CheckCommand "Invoke-IcingaCheckService" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckService_Int32_Verbosity$"
+            order = 7
+        }
+        "-OverrideNotFound" = {
+            set_if = {{
+                var str = macro("$IcingaCheckService_String_OverrideNotFound$"); if (len(str) == 0) { return false; }; return true;
+            }}
+            description = "This argument will allow you to override the default behavior of the plugin in case a service was not found on the system. By default, it will report UNKNOWN but you can set with this argument if the service state should be OK, WARNING or CRITICAL instead"
+            value = {{
+                var str = macro("$IcingaCheckService_String_OverrideNotFound$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 6
         }
         "-Status" = {
@@ -4215,6 +4233,9 @@ object CheckCommand "Invoke-IcingaCheckService" {
         }
         "Status" = {
             value = "$IcingaCheckService_String_Status$"
+        }
+        "OverrideNotFound" = {
+            value = "$IcingaCheckService_String_OverrideNotFound$"
         }
         "Exclude" = {
             value = "$IcingaCheckService_Array_Exclude$"
@@ -4807,12 +4828,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 99
         }
         "-CriticalOther" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for all other updates on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalOther$"
             order = 12
         }
         "-WarningDefender" = {
-            description = "The warning threshold for the Microsoft Defender update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningDefender$"
             order = 9
         }
@@ -4850,7 +4871,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 10
         }
         "-CriticalRollups" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the rollup update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalRollups$"
             order = 8
         }
@@ -4892,7 +4913,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 5
         }
         "-CriticalSecurity" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the security update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
             order = 6
         }
