--- a/config/icinga/Invoke-IcingaCheckService.conf
+++ b/config/icinga/Invoke-IcingaCheckService.conf
@@ -50,6 +50,24 @@ object CheckCommand "Invoke-IcingaCheckService" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckService_Int32_Verbosity$"
+            order = 7
+        }
+        "-OverrideNotFound" = {
+            set_if = {{
+                var str = macro("$IcingaCheckService_String_OverrideNotFound$"); if (len(str) == 0) { return false; }; return true;
+            }}
+            description = "This argument will allow you to override the default behavior of the plugin in case a service was not found on the system. By default, it will report UNKNOWN but you can set with this argument if the service state should be OK, WARNING or CRITICAL instead"
+            value = {{
+                var str = macro("$IcingaCheckService_String_OverrideNotFound$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 6
         }
         "-Status" = {
@@ -143,6 +161,9 @@ object CheckCommand "Invoke-IcingaCheckService" {
         }
         "Status" = {
             value = "$IcingaCheckService_String_Status$"
+        }
+        "OverrideNotFound" = {
+            value = "$IcingaCheckService_String_OverrideNotFound$"
         }
         "Exclude" = {
             value = "$IcingaCheckService_Array_Exclude$"
