Adds new process provider to process plugin

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -1838,7 +1838,7 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckProcess_Int32_Verbosity$"
-            order = 21
+            order = 22
         }
         "-TotalThreadCountWarning" = {
             description = "Compares thread usage for all processes with the same name against the given threshold. Will throw warning if exceeded.  Follows the Icinga Plugin threshold guidelines."
@@ -1935,6 +1935,29 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
             value = "$IcingaCheckProcess_Object_CPUCritical$"
             order = 7
         }
+        "-ExcludeProcess" = {
+            description = "Define a list of process names which are excluded from the final result. Only the process name is required without '.exe' at the end."
+            value = {{
+                var arr = macro("$IcingaCheckProcess_Array_ExcludeProcess$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 21
+        }
         "-TotalCPUCritical" = {
             description = "Compares cpu usage for all processes with the same name against the given threshold. Will throw critical if exceeded.  Follows the Icinga Plugin threshold guidelines."
             value = "$IcingaCheckProcess_Object_TotalCPUCritical$"
@@ -1990,6 +2013,9 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
         }
         "ThresholdInterval" = {
             value = "$IcingaCheckProcess_String_ThresholdInterval$"
+        }
+        "ExcludeProcess" = {
+            value = "$IcingaCheckProcess_Array_ExcludeProcess$"
         }
         "TotalPageFileWarning" = {
             value = "$IcingaCheckProcess_Object_TotalPageFileWarning$"
@@ -3634,7 +3660,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 7
         }
         "-WarningTotal" = {
-            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 8
         }
@@ -4878,7 +4904,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 0
         }
         "-WarningDefender" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the Microsoft Defender update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningDefender$"
             order = 9
         }
@@ -4901,7 +4927,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 100
         }
         "-WarningOther" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for all other updates on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningOther$"
             order = 11
         }
@@ -4911,12 +4937,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 3
         }
         "-CriticalDefender" = {
-            description = "The critical threshold for the Microsoft Defender update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalDefender$"
             order = 10
         }
         "-CriticalRollups" = {
-            description = "The critical threshold for the rollup update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalRollups$"
             order = 8
         }
@@ -4953,7 +4979,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 2
         }
         "-WarningSecurity" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the security update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningSecurity$"
             order = 5
         }
