--- a/config/icinga/Invoke-IcingaCheckProcess.conf
+++ b/config/icinga/Invoke-IcingaCheckProcess.conf
@@ -14,7 +14,7 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckProcess_Int32_Verbosity$"
-            order = 21
+            order = 22
         }
         "-TotalThreadCountWarning" = {
             description = "Compares thread usage for all processes with the same name against the given threshold. Will throw warning if exceeded.  Follows the Icinga Plugin threshold guidelines."
@@ -111,6 +111,29 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
             value = "$IcingaCheckProcess_Object_CPUCritical$"
             order = 7
         }
+        "-ExcludeProcess" = {
+            description = "Define a list of process names which are excluded from the final result. Only the process name is required without '.exe' at the end."
+            value = {{
+                var arr = macro("$IcingaCheckProcess_Array_ExcludeProcess$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 21
+        }
         "-TotalCPUCritical" = {
             description = "Compares cpu usage for all processes with the same name against the given threshold. Will throw critical if exceeded.  Follows the Icinga Plugin threshold guidelines."
             value = "$IcingaCheckProcess_Object_TotalCPUCritical$"
@@ -166,6 +189,9 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
         }
         "ThresholdInterval" = {
             value = "$IcingaCheckProcess_String_ThresholdInterval$"
+        }
+        "ExcludeProcess" = {
+            value = "$IcingaCheckProcess_Array_ExcludeProcess$"
         }
         "TotalPageFileWarning" = {
             value = "$IcingaCheckProcess_Object_TotalPageFileWarning$"
