Adds new EventLog provider integration

--- a/config/icinga/Invoke-IcingaCheckEventlog.conf
+++ b/config/icinga/Invoke-IcingaCheckEventlog.conf
@@ -3,7 +3,7 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
 
     arguments += {
         "-Before" = {
-            description = "Used to specify time data of which point the plugin should stop considering event logs. You can either use a fixed date and time like '2021/01/30 12:00:00', a fixed day '2021/01/30' or use more dynamic approaches like '1d', '10h' and so on.  By using '2h' for example, log files of the last 2 hours will be ignored. Please ensure to manually set the `-After` argument and ensure you go back further in time with the `-After` argument than the `-Before` argument.  Allowed units: ms, s, m, h, d, w, M, y"
+            description = "Defines the end point on which timeframe the plugin will stop to read event log information. Using 2h as argument as example, will ignore all events of the past 2 hours from the time the plugin was executed. This should be used in combination with the '-After' argument. As example, you could provide '-After 6h' to start reading all eventlogs from the past 6 hours, and use '-Before 2h' to skip the last 2 hours. In this scenario, would receive 4 hours of eventlogs, while the last 2 hours have been ignored. For thresholds you can be very specific by providing the time in a time format or by using simple time metrics by their units. Examples:  '2024/01/01 12:00:00': Will stop reading eventlogs after the 1st January 2024 12:00 CET '2024/01/15': Will stop reading eventlogs after the 15th January 2024 00:00 CET '4h': Will ignore eventlogs of the past 4 hours '1d': Will ignore eventlogs of the past day (24 hours)  Allowed units for time metrics: ms, s, m, h, d, w, M, y  Example ``` Start of EventLog        Plugin Execution v         After 6h           Before 2h  v |-------------|------------------|------| 8:00        10:00              14:00    16:00 | Not fetched | Fetched          | Not fetched```"
             value = "$IcingaCheckEventlog_Object_Before$"
             order = 16
         }
@@ -58,7 +58,7 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             order = 13
         }
         "-After" = {
-            description = "Used to specify time data of which point the plugin should start to read event logs from. You can either use a fixed date and time like '2021/01/30 12:00:00', a fixed day '2021/01/30' or use more dynamic approaches like '1d', '10h' and so on.  Allowed units: ms, s, m, h, d, w, M, y"
+            description = "Defines the starting point on which timeframe the plugin will start to read event log information. Using 4h as argument as example, will provide all entries from the time the plugin was executed to the past 4 hours. For thresholds you can be very specific by providing the time in a time format or by using simple time metrics by their units. Examples:  '2024/01/01 12:00:00': Will start reading eventlogs after the 1st January 2024 12:00 CET '2024/01/15': Will start reading eventlogs after the 15th January 2024 00:00 CET '4h': Will read the past 4 hours '1d': Will read the past day (24 hours)  Allowed units for time metrics: ms, s, m, h, d, w, M, y  Example ``` Start of EventLog       Plugin Execution v                After 4h              v |--------------------|-----------------| 10:00              12:00           16:00 | Not fetched        | Fetched         |```"
             value = "$IcingaCheckEventlog_Object_After$"
             order = 15
         }
@@ -102,10 +102,6 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
                 return ("'" + str + "'");
             }}
             order = 4
-        }
-        "-C" = {
-            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckEventlog' "
-            order = 0
         }
         "-ThresholdInterval" = {
             set_if = {{
